# pysyquantis

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: plot_results.py  run.py
pysyquantis/: __init__.py  __main__.py  cli.py  core.py  exceptions.py
tests/: conftest.py  test_cli.py  test_core.py  test_main.py
